[package]
name = "try_image"
version = "0.1.0"
edition = "2021"

[features]
default = ["sixel"]
sixel = ["sixel-rs"]

[dependencies]
image = "0.24"
sixel-rs = { version = "0.5.0", optional = true }
# Video support
opencv = { version = "0.92", default-features = false, features = ["videoio", "imgcodecs", "imgproc"] }